k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awroberts-web
  namespace: awroberts
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - awroberts.co.uk
        - www.awroberts.co.uk
      secretName: awroberts-tls
  rules:
    - host: awroberts.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awroberts-web
                port:
                  number: 80
    - host: www.awroberts.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awroberts-web
                port:
                  number: 80
