k8s/saddleworth-machine-opportunity.yaml
apiVersion: v1
kind: Service
metadata:
  name: saddleworth-machine-opportunity
  namespace: awroberts
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: saddleworth-pi
  namespace: awroberts
subsets:
  - addresses:
      - ip: 100.123.145.34
    ports:
      - name: http
        port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saddleworth-pi
  namespace: awroberts
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: saddleworth.machineopportunity.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saddleworth-pi
                port:
                  number: 80
